--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>React Tutorial</title>
-    <link rel="stylesheet" href="build/bootstrap.min.css" >
     <link rel="stylesheet" href="build/bootstrap.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="build/react.js"></script>
     <script src="build/react-dom.js"></script>
     <script src="build/browser.min.js"></script>
-    <script src="build/jquery.min.js"></script>
+    <link rel="stylesheet" href="./css/app.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/2.6.1/ReactRouter.min.js"></script>
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/babel" src="js/app6.js"></script>
+    <script type="text/babel" src="js/app.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
